@@ -818,3 +818,4 @@ When restoring a virtual server that uses features not supported on the system, 
 Custom styles can use the nocontent=1 line in style.info to specify that no initial content needs to be entered.
 When moving a virtual server to a new system via a restore, if any required PHP modules that were installed on the old system are missing on the new, they will be automatically installed (where possible). In addition, you will be notified if any required PHP versions are missing.
 When editing a virtual server without a private IP address, one can be added that is associated with an existing interface on the system.
+When a domain is restored to a system with a new IP address, the IP in the SPF record is updated.
